[gd_scene load_steps=6 format=2]

[ext_resource path="res://levelsAndMenu/Menu Principal.gd" type="Script" id=1]
[ext_resource path="res://levelsAndMenu/Enrutamiento Dinámico.png" type="Texture" id=2]
[ext_resource path="res://fuentes/Menu Principal.tres" type="DynamicFont" id=3]
[ext_resource path="res://Audio/botones/zipclick.wav" type="AudioStream" id=4]
[ext_resource path="res://Audio/botones/War song.mp3" type="AudioStream" id=5]

[node name="Menu Principal" type="Node2D"]
script = ExtResource( 1 )

[node name="EnrutamientoDinámico" type="Sprite" parent="."]
position = Vector2( 513, 301 )
scale = Vector2( 0.69375, 0.653704 )
texture = ExtResource( 2 )

[node name="Start" type="Button" parent="."]
modulate = Color( 0.87451, 0.929412, 0.701961, 1 )
self_modulate = Color( 1, 0.976471, 0.976471, 1 )
margin_left = 410.0
margin_top = 254.0
margin_right = 629.0
margin_bottom = 316.0
custom_colors/font_color_hover = Color( 1, 0.133333, 0.133333, 1 )
custom_colors/font_color_pressed = Color( 0.152941, 0.564706, 0.788235, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Start"

[node name="Credits" type="Button" parent="."]
modulate = Color( 0.87451, 0.929412, 0.701961, 1 )
self_modulate = Color( 1, 0.976471, 0.976471, 1 )
margin_left = 409.0
margin_top = 457.0
margin_right = 628.0
margin_bottom = 519.0
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0.152941, 0.564706, 0.788235, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="Quit" type="Button" parent="."]
modulate = Color( 0.87451, 0.929412, 0.701961, 1 )
self_modulate = Color( 1, 0.976471, 0.976471, 1 )
margin_left = 407.0
margin_top = 357.0
margin_right = 626.0
margin_bottom = 419.0
input_pass_on_modal_close_click = false
custom_colors/font_color_hover = Color( 1, 0.0313726, 0.0313726, 1 )
custom_colors/font_color_pressed = Color( 0.152941, 0.564706, 0.788235, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Credits"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="audioFondo" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -19.227

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Credits_pressed"]
[connection signal="pressed" from="Credits" to="." method="_on_Start2_pressed"]
[connection signal="pressed" from="Quit" to="." method="_on_Quit_pressed"]
